# DoAnCoSoNganh

./: .gitignore  README.md  pyproject.toml
data/corpus/: corpus.json
data/history/: chat_history.json
docs/: ASYNC_CANCELLATION_GUIDE.md  SYSTEM_SPECIFICATION.md
src/: __init__.py  main.py
src/api/: __init__.py  routes.py
src/core/: __init__.py  cancellation.py  config.py  models.py
src/services/: __init__.py  chat.py  file_processor.py  llm.py  retrieval.py  semantic_analyzer.py
src/static/: script.js  style.css
src/templates/: index.html
